--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,5 +1,5 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 1s
 
 scrape_configs:
   - job_name: "prometheus"
@@ -8,4 +8,4 @@ scrape_configs:
 
   - job_name: "books_async"
     static_configs:
-      - targets: ["localhost:8000"]
+      - targets: ["host.docker.internal:8000"]
